--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
   },
   "homepage": "https://github.com/beiyi1996/Nodejs-Web-Application#readme",
   "dependencies": {
+    "aws-sdk": "^2.561.0",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "mongoose": "^5.7.7",
-    "nodemon": "^1.19.4"
+    "nodemailer": "^6.3.1",
+    "nodemon": "^1.19.4",
+    "redis": "^2.8.0"
   }
 }
