--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "express-validator": "^6.2.0",
     "mongoose": "^5.7.7",
     "nodemailer": "^6.3.1",
     "nodemon": "^1.19.4",
