--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "aws-sdk": "^2.561.0",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
+    "connect-mongo": "^3.1.2",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "express-validator": "^6.2.0",
