--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "homepage": "https://github.com/beiyi1996/Nodejs-Web-Application#readme",
   "dependencies": {
     "aws-sdk": "^2.561.0",
-    "bcrypt": "^3.0.6",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "connect-mongo": "^3.1.2",
     "express": "^4.17.1",
