--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,9 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
-    "react-text-mask": "^5.4.3"
+    "react-slick": "^0.25.2",
+    "react-text-mask": "^5.4.3",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
