--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon --exec babel-node ./src/app.js ",
+    "server": "nodemon --exec babel-node app.js",
     "client": "npm run start --prefix client",
-    "start": "node app.js",
-    "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
+    "start": "npm run build-node && node dist/app.js",
+    "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
+    "build-node": "babel ./src --out-dir ./dist --source-maps --copy-files && babel app.js -d dist",
+    "build ": "npm run build-node"
   },
   "repository": {
     "type": "git",
@@ -21,6 +23,7 @@
   },
   "homepage": "https://github.com/beiyi1996/Nodejs-Web-Application#readme",
   "dependencies": {
+    "@babel/runtime": "^7.8.4",
     "aws-sdk": "^2.561.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
@@ -40,6 +43,7 @@
     "@babel/cli": "^7.7.0",
     "@babel/core": "^7.7.2",
     "@babel/node": "^7.7.0",
+    "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.7.1"
   }
 }
