--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "express-validator": "^6.2.0",
     "mongoose": "^5.7.7",
     "nodemailer": "^6.3.1",
-    "nodemon": "^1.19.4"
+    "nodemon": "^1.19.4",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.0",
