--- a/package.json
+++ b/package.json
@@ -35,6 +35,10 @@
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "express-validator": "^6.2.0",
+    "imagemin": "^7.0.1",
+    "imagemin-jpegtran": "^6.0.0",
+    "imagemin-mozjpeg": "^8.0.0",
+    "imagemin-pngquant": "^8.0.0",
     "mongoose": "^5.7.7",
     "nodemailer": "^6.3.1",
     "nodemon": "^1.19.4"
