--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
-  "appService.defaultWebAppToDeploy": "/subscriptions/f0d51142-e389-4821-aec2-b67e0fdeb9c8/resourceGroups/appsvc_linux_centralus/providers/Microsoft.Web/sites/bookingsystem2020",
   "appService.deploySubpath": "",
-  "appService.zipIgnorePattern": ["node_modules{,/**}", ".vscode{,/**}"]
+  "appService.zipIgnorePattern": [
+    "node_modules{,/**}",
+    ".vscode{,/**}"
+  ],
+  "appService.defaultWebAppToDeploy": "/subscriptions/f0d51142-e389-4821-aec2-b67e0fdeb9c8/resourceGroups/wenchun/providers/Microsoft.Web/sites/bookingsystem2020"
 }
