--- a/.github/workflows/release_bookingsystem2020.yml
+++ b/.github/workflows/release_bookingsystem2020.yml
@@ -23,7 +23,8 @@ jobs:
     - name: npm install, build, and test
       run: |
         npm install
-        
+        npm run build
+
     - name: 'Deploy to Azure Web App'
       uses: azure/webapps-deploy@v1
       with:
