--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nodejs-web-application",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "./dist/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon --exec babel-node app.js",
