master update package script heroku-postbuild

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "npm run build-node && node dist/app.js",
     "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
     "build-node": "babel ./src --out-dir ./dist --source-maps --copy-files && babel app.js -d dist",
-    "build": "npm run build-node"
+    "build": "npm run build-node",
+    "heroku-postbuild": "npm install"
   },
   "repository": {
     "type": "git",
